@@ -4,10 +4,12 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import org.hl7.fhir.utilities.Utilities;
+import org.hl7.fhir.utilities.filesystem.ManagedFileAccess;
 
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -76,6 +78,11 @@ public class FhirSettings {
     return instance.fhirSettings.getRubyPath();
   }
 
+  public static String getGemPath() {
+    getInstance();
+    return instance.fhirSettings.getGemPath();
+  }
+
   public static boolean hasFhirTestCasesPath() {
     getInstance();
     return instance.fhirSettings.getFhirTestCasesPath() != null;
@@ -134,6 +141,12 @@ public class FhirSettings {
       : instance.fhirSettings.getProhibitNetworkAccess(); 
   }
   
+  /**
+   * See ManagedWebAccess and use that to control network access
+   * 
+   * @param value
+   */
+  @Deprecated
   public static void setProhibitNetworkAccess(boolean value) {
     prohibitNetworkAccess = value;
   }
@@ -194,7 +207,7 @@ public class FhirSettings {
   }
 
   static FhirSettingsPOJO getFhirSettingsPOJO(String filePath) throws IOException {
-    final File file = new File(filePath);
+    final File file = ManagedFileAccess.file(filePath);
 
     if (!file.exists()) {
       return new FhirSettingsPOJO();
@@ -202,7 +215,7 @@ public class FhirSettings {
 
     final ObjectMapper objectMapper = new ObjectMapper();
     objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-    final InputStream inputStream = new FileInputStream(file);
+    final InputStream inputStream = ManagedFileAccess.inStream(file);
     final FhirSettingsPOJO output = objectMapper.readValue(inputStream, FhirSettingsPOJO.class);
 
     return output;
@@ -214,17 +227,17 @@ public class FhirSettings {
 
   public static boolean isIgnoreDefaultPackageServers() {
     getInstance();
-    if (instance.fhirSettings.getPackageManagement() == null || instance.fhirSettings.getPackageManagement().getIgnoreDefaultServers() == null) {
+    if (instance.fhirSettings.getIgnoreDefaultPackageServers() == null) {
       return false;
     }
-    return instance.fhirSettings.getPackageManagement().getIgnoreDefaultServers();
+    return instance.fhirSettings.getIgnoreDefaultPackageServers();
   }
 
-  public static List<PackageServerPOJO> getPackageServers() {
+  public static List<ServerDetailsPOJO> getServers() {
     getInstance();
-    if (instance.fhirSettings.getPackageManagement() == null) {
+    if (instance.fhirSettings.getServers() == null) {
       return Collections.emptyList();
     }
-    return List.of(instance.fhirSettings.getPackageManagement().getServers().toArray(new PackageServerPOJO[]{}));
+    return Arrays.asList(instance.fhirSettings.getServers().toArray(new ServerDetailsPOJO[]{}));
   }
 }
